--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <strong>Matheus</strong> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a> de <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a></p>
+        <p>Site criado por <strong>Matheus Pergoli</strong> All rights reserved &copy;</p>
     </footer>
 </body>
 </html>
